--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <title>Document</title>
     <script type="text/javascript" src="./app.js"></script>
   </head>
-  <body></body>
+  <body>
+    <p>Here's how to fix some common git mistakes.</p>
+  </body>
 </html>
